[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/fonts/minecraftia/Minecraftia-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/menu/panda_avatar.png" type="Texture" id=2]
[ext_resource path="res://script/UserAccount.gd" type="Script" id=3]
[ext_resource path="res://assets/menu/back button.png" type="Texture" id=4]
[ext_resource path="res://assets/menu/s_background.png" type="Texture" id=5]
[ext_resource path="res://assets/menu/pass_reset_2.png" type="Texture" id=6]
[ext_resource path="res://assets/menu/sign_out_2.png" type="Texture" id=7]
[ext_resource path="res://assets/menu/foyez_text/username.png" type="Texture" id=8]
[ext_resource path="res://assets/menu/check_email_bn.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 52
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 46
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="UserAccount" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 3 )

[node name="Backgtound" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1040.0
margin_bottom = -1880.0
texture = ExtResource( 5 )

[node name="Cover" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00784314, 0.282353, 0.0941176, 0.658824 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1089.0
margin_bottom = 763.0
color = Color( 0.87451, 0.87451, 0.87451, 1 )

[node name="EmailBG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 295.0
margin_top = 91.0
margin_right = -87.0
margin_bottom = -1727.0
color = Color( 0.168627, 0.152941, 0.152941, 0.764706 )

[node name="ResetPass" type="TextureButton" parent="."]
margin_left = 565.0
margin_top = 823.0
margin_right = 882.0
margin_bottom = 923.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 6 )

[node name="BackBtn" type="TextureButton" parent="."]
margin_left = 58.0
margin_top = 61.0
margin_right = 132.0
margin_bottom = 131.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 4 )

[node name="ProfilePic" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -47.0
margin_top = 200.0
margin_right = 53.0
margin_bottom = 290.0
texture = ExtResource( 2 )

[node name="UsernameLabel" type="TextureRect" parent="."]
margin_left = 313.0
margin_top = 250.0
margin_right = 716.0
margin_bottom = 343.0
texture = ExtResource( 8 )

[node name="UserEmail" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -106.0
margin_top = 109.0
margin_right = 312.0
margin_bottom = 181.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "luke@mail.com"
align = 1
valign = 1

[node name="CheckEmail" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 211.0
margin_top = 502.0
margin_right = -193.0
margin_bottom = -1138.0
texture = ExtResource( 9 )

[node name="Username" type="LineEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 297.0
margin_top = 368.0
margin_right = -101.0
margin_bottom = -1442.0
custom_colors/cursor_color = Color( 0.807843, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "fefefefef"
max_length = 12
caret_blink = true

[node name="SaveTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SignOutBtn" type="TextureButton" parent="."]
margin_left = 679.0
margin_top = 1048.0
margin_right = 954.0
margin_bottom = 1158.0
rect_scale = Vector2( 1.3, 1.3 )
texture_normal = ExtResource( 7 )

[connection signal="pressed" from="ResetPass" to="." method="_on_ResetPass_pressed"]
[connection signal="pressed" from="BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="timeout" from="SaveTimer" to="." method="_on_SaveTimer_timeout"]
[connection signal="pressed" from="SignOutBtn" to="." method="_on_SignOutBtn_pressed"]
